--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <application
-        android:label="myapp"
+        android:label="Ayazon"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
